force-app/main/default/objects/Bus__c/fields/Available_Seats__c.field-meta.xml
<CustomField>
    <fullName>Available_Seats__c</fullName>
    <formula>Total_Capacity__c  -  No_of_Seats_Occupied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Seats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>