force-app/main/default/objects/Bus__c/fields/Bus_Status__c.field-meta.xml
<CustomField>
    <fullName>Bus_Status__c</fullName>
    <label>Bus Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>On Route</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>