force-app/main/default/objects/Bus__c/fields/Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Date__c</fullName>
    <label>Maintenance Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>