force-app/main/default/objects/Bus__c/fields/No_of_Seats_Occupied__c.field-meta.xml
<CustomField>
    <fullName>No_of_Seats_Occupied__c</fullName>
    <label>No of Seats Occupied</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>