force-app/main/default/objects/Bus__c/fields/Number_Plate__c.field-meta.xml
<CustomField>
    <fullName>Number_Plate__c</fullName>
    <label>Number Plate</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>