force-app/main/default/objects/Bus__c/fields/Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Remaining Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>