force-app/main/default/objects/Bus__c/fields/Remaining_Days_Formula__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Days_Formula__c</fullName>
    <formula>MAX(
0,
(  Start_Date__c  +  Total_Days__c  ) - TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Days Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>