force-app/main/default/objects/Bus__c/fields/Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity__c</fullName>
    <label>Total Capacity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>