force-app/main/default/objects/Bus__c/validationRules/Validate_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt;= Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be later than Start Date.</errorMessage>
</ValidationRule>